tests/test_files/invalid/syntax/expr_invalid_operator_use.pfdl
# Copyright The MF-Plugin Contributors
#
# Licensed under the MIT License.
# For details on the licensing terms, see the LICENSE file.
# SPDX-License-Identifier: MIT

Rule orderOfEvents(event1, event2)
    ((10 + 5) / 30) == 5+
End
